--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -7,14 +7,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "apisauce": "^0.14.3",
+    "lodash": "^4.17.4",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-storage": "^0.2.2",
+    "react-native-ui-kitten": "^2.0.1",
+    "react-navigation": "^1.0.0-beta.22",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.0.4",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.0.0",
+    "redux-devtools": "^3.4.1"
   },
   "jest": {
     "preset": "react-native"
