--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "apisauce": "^0.14.3",
     "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-elements": "^0.18.5",
     "react-native-storage": "^0.2.2",
-    "react-native-ui-kitten": "^2.0.1",
+    "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
