--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-camera": "^0.12.0",
     "react-native-elements": "^0.18.5",
     "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.4.3",
