--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.51.0",
     "react-native-camera": "^0.12.0",
     "react-native-elements": "^0.18.5",
+    "react-native-orientation": "^3.1.3",
     "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.22",
