扫描二维码逻辑

--- a/sewerage/android/gradle.properties
+++ b/sewerage/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+systemProp.Infore_Key_Alias_Pwd=infore
+systemProp.Infore_Key_Alias=my-key-alias
+systemProp.Infore_Key_Store_Pwd=infore
+systemProp.Infore_Key_Store=my-release-key.keystore
