添加登录模块，request数据结构更改，增加ApiUtils做直接请求，

--- a/sewerage/ios/sewerage/Info.plist
+++ b/sewerage/ios/sewerage/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string></string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string></string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string></string>
 	<key>NSCameraUsageDescription</key>
 	<string>需要调用摄像功能</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -41,7 +47,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
