--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -15,6 +15,7 @@
     "react-native-camera": "^0.12.0",
     "react-native-elements": "^0.18.5",
     "react-native-image-crop-picker": "^0.19.1",
+    "react-native-image-picker": "^0.26.7",
     "react-native-orientation": "^3.1.3",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-storage": "^0.2.2",
