--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -17,6 +17,7 @@
     "react-native-image-crop-picker": "^0.19.1",
     "react-native-image-picker": "^0.26.7",
     "react-native-orientation": "^3.1.3",
+    "react-native-percentage-circle": "^1.0.6",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.4.3",
