--- a/sewerage/android/app/build.gradle
+++ b/sewerage/android/app/build.gradle
@@ -98,6 +98,7 @@ android {
     buildToolsVersion '26.0.2'
 
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.sewerage"
         minSdkVersion 16
         targetSdkVersion 26
