--- a/sewerage/android/gradle.properties
+++ b/sewerage/android/gradle.properties
@@ -18,7 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
-
+android.enableAapt2=false
 systemProp.Infore_Key_Alias_Pwd=infore
 systemProp.Infore_Key_Alias=my-key-alias
 systemProp.Infore_Key_Store_Pwd=infore
