--- a/sewerage/android/app/build.gradle
+++ b/sewerage/android/app/build.gradle
@@ -76,6 +76,12 @@ allprojects {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-orientation')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-image-crop-picker')
+    compile project(':react-native-camera')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-orientation')
