--- a/sewerage/ios/Podfile
+++ b/sewerage/ios/Podfile
@@ -3,4 +3,6 @@ platform :ios, '8.0'
 target 'sewerage' do
     pod 'RSKImageCropper'
     pod 'QBImagePickerController'
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
 end
