--- a/sewerage/package.json
+++ b/sewerage/package.json
@@ -18,6 +18,7 @@
     "react-native-image-crop-picker": "^0.19.1",
     "react-native-image-picker": "^0.26.7",
     "react-native-image-zoom-viewer": "^2.0.18",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-orientation": "^3.1.3",
     "react-native-percentage-circle": "^1.0.6",
     "react-native-scrollable-tab-view": "^0.8.0",
